Set min-height on nav element to fix spacing issue on larger screens

--- a/style.css
+++ b/style.css
@@ -213,6 +213,7 @@ a {
         align-items: center;
         justify-content: center;
         width: 90vw;
+        min-height: 25vh;
         margin: auto;
         border: none;
         overflow: hidden;
